# render-slides

./: .gitignore  Cargo.toml  README.md  build.rs  find_kerning.py  generate_temp.py  parse_test.rs  print_ilm.py  print_ir.rs  pyproject.toml  requirements-dev.txt  run_analyze_temp.py  run_scratch.sh  scratch.py  scratch.rs  tune.py
.github/workflows/: parity-harness.yml
docs/: callpath-walkthroughs.md  documentation-inventory.md  documentation-plan.md  implementation-plan.md  internal-architecture.md  llm-agent-guide.md  python-api.md  template-engine-proposal.md
fixtures/parity/: alignment_test_complex.ir.json  alignment_test_complex.render.png.base64  alignment_test_complex.render.pptx.base64  comparison_basic.ir.json  comparison_basic.preview.html  comparison_basic.render.png.base64  comparison_basic.render.pptx.base64  image_focus_basic.ir.json  image_focus_basic.preview.html  image_focus_basic.render.png.base64  image_focus_basic.render.pptx.base64  image_test_complex.ir.json  image_test_complex.render.png.base64  image_test_complex.render.pptx.base64  markdown_lists_complex.ir.json  markdown_lists_complex.render.png.base64  markdown_lists_complex.render.pptx.base64  markdown_tables_complex.ir.json  markdown_tables_complex.render.png.base64  markdown_tables_complex.render.pptx.base64  markdown_test_complex.ir.json  markdown_test_complex.render.png.base64  markdown_test_complex.render.pptx.base64  quote_basic.ir.json  quote_basic.preview.html  quote_basic.render.png.base64  quote_basic.render.pptx.base64  section_basic.ir.json  section_basic.preview.html  section_basic.render.png.base64  section_basic.render.pptx.base64  text_length_test_complex.ir.json  text_length_test_complex.render.png.base64  text_length_test_complex.render.pptx.base64  title_basic.ir.json  title_basic.preview.html  title_basic.render.png.base64  title_basic.render.pptx.base64  title_body_basic.ir.json  title_body_basic.preview.html  (+12 more)
gallery/: preview_gallery.md
gallery/renders/: alignment_test_complex.pptx  comparison_basic.pptx  image_focus_basic.pptx  image_test_complex.pptx  markdown_lists_complex.pptx  markdown_tables_complex.pptx  markdown_test_complex.pptx  quote_basic.pptx  section_basic.pptx  text_length_test_complex.pptx  title_basic.pptx  title_body_basic.pptx  two_column_basic.pptx  two_column_split_complex.pptx  typography_font_sizes_complex.pptx
python/render_slides/: __init__.py
schemas/: ir-v1.schema.json
schemas/v1/: ir.schema.json
scripts/: analyze.py  generate-docs.sh  generate_gallery.py  llm_flow_mock.py  migrate_renderer_fixtures_to_base64.py  parity_harness.py  test-python-build.sh
src/: html_preview.rs  lib.rs  operations.rs  patch.rs  py_api.rs  schema.rs  templating.rs  theme.rs  transport.rs  types.rs
src/ilm/: expr.rs  html.rs  layout_map.rs  layout_map.rs.orig  layout_map.rs.patch  layout_map.rs.patch2  layout_map.rs.patch3  layout_map.rs.rej  markdown.rs  mod.rs  model.rs
src/output/: mod.rs  png.rs  pptx.rs
src/tests/: mod.rs  operations_schema_tests.rs  pptx_tests.rs  preview_tests.rs
templates/layouts/: comparison.slide.jinja  comparison.yaml  image_focus.slide.jinja  image_focus.yaml  image_test.yaml  quote.slide.jinja  quote.yaml  refinement_controls.yaml  (+9 more)
tests/: test_api.py  test_fixture_migration_helper.py  test_parse_markdown.rs  test_parser.rs
