[package]
name = "render_slides"
version = "0.1.0"
edition = "2021"
description = "Rust core for the render-slides Python package"
license = "MIT"

[lib]
name = "render_slides"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
no-default-features = true

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2.5"


[dev-dependencies]
tempfile = "3"
