[package]
name = "render_slides"
version = "0.1.0"
edition = "2021"
description = "Rust core for the render-slides Python package"
license = "MIT"

[lib]
name = "render_slides"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
no-default-features = true

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.37"
cairo-rs = { version = "0.22", features = ["png"] }
pango = "0.22"
pangocairo = "0.22"
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
url = "2.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
cosmic-text = "0.19.0"
base64 = "0.22.1"
imagesize = "0.14.0"
glib = "0.22"


[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
